# uart-communication-embassy

./: .gitignore  Cargo.toml  README.md  st_nucleo_l5.cfg
.cargo/: config.toml
src/: async_timer.rs  backoff_handler.rs  communication.rs  half_duplex.rs  init.rs  locator.rs  main.rs  service.rs  uart_ip.rs
src/communication/: Cargo.toml
src/communication/src/: half_duplex.rs  lib.rs
src/std-simulation/: Cargo.toml
src/std-simulation/src/: main.rs
src/stm32/: Cargo.toml  stm32l552.svd
src/stm32/src/: backoff_handler.rs  half_duplex.rs  init.rs  locator.rs  main.rs  pwm_uart.rs  stm32_service.rs  stm32_timer.rs  stm32_uart.rs
